# appproyecto

./: .env  .gitignore  Dockerfile  FRONTEND_SECURITY_AUDIT.md  SECURITY_AUDIT.md  docker-compose.yml
backend/: Cargo.toml
backend/backend/src/: main.rs
backend/backend/src/admin/: mod.rs
backend/backend/src/api/: admin_routes.rs
backend/backend/src/crypto/: mod.rs  scanner.rs
backend/backend/src/db/: mod.rs
backend/src/: config.rs  lib.rs  main.rs  models.rs
backend/src/admin/: mod.rs
backend/src/api/: admin_routes.rs  mod.rs  user_routes.rs
backend/src/crypto/: mod.rs
backend/src/db/: mod.rs
backend/src/engine/: mod.rs  parimutuel.rs
backend/src/services/: escrow.rs  mod.rs  scanner.rs  tournament.rs
backend/tests/: security_tests.rs
frontend/: next.config.ts
frontend/src/components/: DepositCard.tsx  EventList.tsx
frontend/src/lib/: api.ts
infra/nginx/: nginx.conf
nginx/: proxy_seguro.conf
tor/: .gitignore  Dockerfile  torrc
