[package]
name = "sicbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime asíncrono y framework web seguro
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# Persistencia local inmutable (Ledger)[cite: 1]
rocksdb = "0.21"

# Serialización y utilidades[cite: 1]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Criptografía para Monero (XMR)[cite: 1]
monero = "0.20"
